[package]
name = "chess"
version = "0.1.0"
authors = ["MatrixMaster47 _ <46401327+ArvidX@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19.0"
regex = "1.4.3"
lazy_static = "1.4.0"
